package assignment.logistics;

public interface Transport {
    void deliver(String cargo, String destination);
}